	NX-1376 (Windows agent reports incorrect OS version on Windows 10)
	NX-1379 (Rack width calculated incorrectly if only front/back selected)
	NX-1380 (Database error when node has LLDP ID longer than 63 characters)
	NX-1381 (Unjustified NXSL errors "cannot do automatic type cast")
	NX-1384 (Automatic ping target configuration on first data request)


*
* 2.2.1
*

- Implemented separate access rights for each DCI object
- Option to read log files using VSS snapshots on Windows
- Per stage confirmation in database manager during database check
- Fixed file download cancelation
- HTTPS support in SMSEagle driver
- New network map element - text box
- New debug log format with tags
- Ability to set debug level per tag or tag mask
- Improved audit logging on object creation
- NXSL function "GeoLocation" replaced with "GeoLocation" class constructor
- Optimized object updates in database (to reduce load on database in large installations)
- Thread pool used for data collection instead of fixed number of poller threads
- Optimized data collection from agents
- Configurable number of records per transaction for writing DCI data
- Fixed issues: 
	NX-662 (New network map element - text box)
	NX-703 (Export/Import actions)
	NX-757 (Instance discovery - grace period for removed instances before deleting DCIs)
	NX-801 (Deleted nodes not removed from trusted nodes lists of other objects)
	NX-1045 (Add rack/chassis diagram as dashboard element)
	NX-1142 (Back view for racks)
	NX-1201 (Discovered node links on map should automatically be set to color based on the status of the interfaces shown in connector names)
	NX-1252 (Fix automatically generated transformation scripts for 64 bit interface counters)
	NX-1268 (Do DNS resolve for node names via zone proxy)
	NX-1289 (Override PollCountForStatusChange at Node level)
	NX-1292 (Option for line charts to not always use 0 as base)
	NX-1336 (Cluster DCI Max/Min aggregation returns value from last node instead of expected max/min)