@@ -18,6 +18,8 @@
  */
 package org.netxms.ui.eclipse.console.resources;
 
+import org.eclipse.jface.preference.IPreferenceStore;
+import org.eclipse.jface.preference.PreferenceConverter;
 import org.eclipse.jface.resource.ImageDescriptor;
 import org.eclipse.swt.graphics.Color;
 import org.eclipse.swt.graphics.Image;
@@ -26,6 +28,7 @@ import org.netxms.client.constants.ObjectStatus;
 import org.netxms.client.constants.Severity;
 import org.netxms.ui.eclipse.console.Activator;
 import org.netxms.ui.eclipse.console.Messages;
+import org.netxms.ui.eclipse.tools.ColorCache;
 
 /**
  * Status display information
@@ -35,7 +38,8 @@ public final class StatusDisplayInfo
 	private static String[] statusText = new String[9];
 	private static ImageDescriptor[] statusImageDesc = new ImageDescriptor[9];
 	private static Image[] statusImage = new Image[9];
-	private static String[] statusColor = new String[9];
+	private static ColorCache colorCache;
+	private static Color statusColor[] = new Color[9]; 
 	
 	/**
 	 * Initialize static members. Intended to be called once by library activator.
@@ -65,15 +69,25 @@ public final class StatusDisplayInfo
 		for(int i = 0; i < statusImageDesc.length; i++)
 			statusImage[i] = statusImageDesc[i].createImage();
 
-		statusColor[ObjectStatus.NORMAL.getValue()] = SharedColors.STATUS_NORMAL;
-		statusColor[ObjectStatus.WARNING.getValue()] = SharedColors.STATUS_WARNING;
-		statusColor[ObjectStatus.MINOR.getValue()] = SharedColors.STATUS_MINOR;
-		statusColor[ObjectStatus.MAJOR.getValue()] = SharedColors.STATUS_MAJOR;
-		statusColor[ObjectStatus.CRITICAL.getValue()] = SharedColors.STATUS_CRITICAL;
-		statusColor[ObjectStatus.UNKNOWN.getValue()] = SharedColors.STATUS_UNKNOWN;
-		statusColor[ObjectStatus.UNMANAGED.getValue()] = SharedColors.STATUS_UNMANAGED;
-		statusColor[ObjectStatus.DISABLED.getValue()] = SharedColors.STATUS_DISABLED;
-		statusColor[ObjectStatus.TESTING.getValue()] = SharedColors.STATUS_TESTING;
+		colorCache = new ColorCache();
+		updateStatusColors();
+	}
+	
+	/**
+	 * Update status colors
+	 */
+	public static void updateStatusColors()
+	{
+      final IPreferenceStore ps = Activator.getDefault().getPreferenceStore();
+      statusColor[0] = colorCache.create(PreferenceConverter.getColor(ps, "Status.Colors.Normal"));
+      statusColor[1] = colorCache.create(PreferenceConverter.getColor(ps, "Status.Colors.Warning"));
+      statusColor[2] = colorCache.create(PreferenceConverter.getColor(ps, "Status.Colors.Minor"));
+      statusColor[3] = colorCache.create(PreferenceConverter.getColor(ps, "Status.Colors.Major"));
+      statusColor[4] = colorCache.create(PreferenceConverter.getColor(ps, "Status.Colors.Critical"));
+      statusColor[5] = colorCache.create(PreferenceConverter.getColor(ps, "Status.Colors.Unknown"));
+      statusColor[6] = colorCache.create(PreferenceConverter.getColor(ps, "Status.Colors.Unmanaged"));
+      statusColor[7] = colorCache.create(PreferenceConverter.getColor(ps, "Status.Colors.Disabled"));
+      statusColor[8] = colorCache.create(PreferenceConverter.getColor(ps, "Status.Colors.Testing"));
 	}
 	
 	/**
@@ -186,7 +200,8 @@ public final class StatusDisplayInfo
 	 */
 	public static Color getStatusColor(ObjectStatus status)
 	{
-		return SharedColors.getColor(statusColor[status.getValue()], Display.getCurrent());
+	   
+		return statusColor[status.getValue()];
 	}
    
    /**
@@ -197,7 +212,7 @@ public final class StatusDisplayInfo
     */
    public static Color getStatusColor(Severity severity)
    {
-      return SharedColors.getColor(statusColor[severity.getValue()], Display.getCurrent());
+      return statusColor[severity.getValue()];
    }
    
    /**
